fixed bug in substituteApiController for orgunit substitutes to rolecatalogue